--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,18 @@ Temporary Items
 
 #IDE
 .idea
+
+
+# VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+
+# Local History for Visual Studio Code
+.history/
+
+# Built Visual Studio Code Extensions
+*.vsix
